Fixed Overflow scroll on Solar Panels for iPhone and iPad, also, adding in scroll animation fallbacks, so far red car and five star van added.

--- a/sass/animations/_animations-all.scss
+++ b/sass/animations/_animations-all.scss
@@ -666,35 +666,35 @@
 @media(min-width: $mobile-height) {
 		// FULL SCREEN CAR
 	@-webkit-keyframes moveCarRight { 
-		0% { -webkit-transform: translate3d(-300px, 0, 0); opacity: 0;}
+		0% { -webkit-transform: translate3d(-400px, 0, 0); opacity: 0;}
 		1% { opacity: 1;}
 		98% { -webkit-transform: translate3d(1468px, 0, 0); opacity: 1;}
 		99% { -webkit-transform: translate3d(1468px, 0, 0); opacity: 0;}
-	 	100% { -webkit-transform: translate3d(-300px, 0, 0); opacity: 0;}
+	 	100% { -webkit-transform: translate3d(-400px, 0, 0); opacity: 0;}
 	}
 
 	@-moz-keyframes moveCarRight { 
-		0% { -moz-transform: translate3d(-300px, 0, 0); opacity: 0;}
+		0% { -moz-transform: translate3d(-400px, 0, 0); opacity: 0;}
 		1% { opacity: 1;}
 		98% { -moz-transform: translate3d(1468px, 0, 0); opacity: 1;}
 		99% { -moz-transform: translate3d(1468px, 0, 0); opacity: 0;}
-	 	100% { -moz-transform: translate3d(-300px, 0, 0); opacity: 0;}
+	 	100% { -moz-transform: translate3d(-400px, 0, 0); opacity: 0;}
 	}
 
 	@-o-keyframes moveCarRight {
-		0% { -o-transform: translate3d(-300px, 0, 0); opacity: 0;}
+		0% { -o-transform: translate3d(-400px, 0, 0); opacity: 0;}
 		1% { opacity: 1;}
 		98% { -o-transform: translate3d(1468px, 0, 0); opacity: 1;}
 		99% { -o-transform: translate3d(1468px, 0, 0); opacity: 0;}
-		100% { -o-transform: translate3d(-300px, 0, 0); opacity: 0;}
+		100% { -o-transform: translate3d(-400px, 0, 0); opacity: 0;}
 	}
 
 	@keyframes moveCarRight {
-		0% { transform: translate3d(-300px, 0, 0); opacity: 0;}
+		0% { transform: translate3d(-400px, 0, 0); opacity: 0;}
 		1% { opacity: 1;}
 		98% { transform: translate3d(1468px, 0, 0); opacity: 1;}
 		99% { transform: translate3d(1468px, 0, 0); opacity: 0;}
-		100% { transform: translate3d(-300px, 0, 0); opacity: 0;}
+		100% { transform: translate3d(-400px, 0, 0); opacity: 0;}
 	}
 }
 
