--- a/sass/partials/_mobile-gif-backups.scss
+++ b/sass/partials/_mobile-gif-backups.scss
@@ -24,4 +24,46 @@
 	}
 
 
+	// SCROLL ANIMATIONS BACK UP
+	// FLAG LINE AND SOLAR CAR
+	#c3xgm-about-solar-grey-car,
+	#c3xgm-about-flag-line-grey-car {
+		margin: auto;
+		left:0; right:0;
+	}
+
+	.c3xgm-about-decorative.c3xgm-about-red-car-road {
+		position: relative; overflow-x:hidden;
+
+		#c3xgm-about-red-car {
+			right: -380px;
+
+			@include prefix(animation-fill-mode, both);
+			@include prefix(animation-name, moveCarLeft);
+			@include prefix(animation-delay, 0);
+			@include prefix(animation-duration, 3s);
+			@include prefix(animation-timing-function, linear);
+			@include prefix(animation-iteration-count, infinite);
+		}
+	}
+
+	// div#c3xgm-about-solar-grey-car.
+	.c3xgm-about-grey-top {
+		left: -380px;
+		// @media(min-width: $tablet-height) {left: -480px; }
+
+		@include prefix(animation-fill-mode, both);
+		@include prefix(animation-name, moveCarRight);
+		@include prefix(animation-delay, 0);
+		@include prefix(animation-duration, 4s);
+		@include prefix(animation-timing-function, linear);
+		@include prefix(animation-iteration-count, infinite);	
+	}
+	
+	// HIDE OBSCURING COLUMN
+	div#c3xgm-about-grey-van:before {
+		display: none;
+	}
+
+
 }
